# mms

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
ci/: cargo-out-dir  test-complete
crates/core/: Cargo.toml  lib.rs
crates/mmpm/: Cargo.toml  LICENSE-MIT  README.md
crates/mmpm/src/: lib.rs
crates/mms-pm/: Cargo.toml  README.md
crates/mms-pm/src/: lib.rs
examples/: play.rs
src/: connection.rs  cotp.rs  itot.rs  lib.rs  result.rs  server.rs
