[package]
# essential fields
name = "mms"
version = "0.0.1"
edition = "2018"
# additional fields (in alphabetic order)
authors = ["Glenn Adams <glenn@skynav.com>"]
categories = ["network-programming"]
description = """
mms is a library that implements the Manufacturing
Messaging Specification (MMS) which adheres to ISO 9506
Second Edition (2003); not yet ready for download -
placeholder for work in progress
"""
documentation = "https://github.com/skynav/mms"
homepage = "https://github.com/skynav/mms"
keywords = ["mms"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/skynav/mms"

[dependencies]
anyhow = "1.0"
bytes = "1"
log = "0.4"
simplelog = "0.11"
thiserror = "1.0"
tokio = { version = "1.17.0", features = [ "io-util", "macros", "net", "rt-multi-thread", "signal" ] }
