[package]
# essential fields
name = "mms-mmpm"
version = "0.0.1"
edition = "2021"
# additional fields (in alphabetic order)
authors = ["Glenn Adams <glenn@skynav.com>"]
categories = ["network-programming"]
description = """
mms-mmpm is a library that implements Manufacturing Message Protocol
Machine as defined by ISO 9506 Second Edition (2003)

not yet ready for download - placeholder for work in progress
"""
documentation = "https://github.com/skynav/mms/crates/mmpm"
homepage = "https://github.com/skynav/mms/crates/mmpm"
keywords = ["mms"]
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/skynav/mms/crates/mmpm"

[dependencies]
